crossplane/aws/vpc/crossplane-vpc/05-route-tables.yml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: crossplane-public-route
  labels:
    environment: dev
    managed-by: crossplane
spec:
  forProvider:
    region: us-east-1
    routeTableIdRef:
      name: crossplane-public-rt
    destinationCidrBlock: "0.0.0.0/0"
    gatewayIdRef:
      name: crossplane-igw
  providerConfigRef:
    name: default
